files/stylesheets/style.css
/* ... */
header#header h1 a:hover {
  opacity: 1;
}

header#header h1 a span {
  display: none;
}

/* @group Global Navigation */

header#header ul#global-navigation{
	margin-left: 282px;
	margin-top: 18px;
  background: #2b2539;
  -webkit-border-top-left-radius: 6px;
  -webkit-border-top-right-radius: 6px;
-moz-border-radius: 6px;
-webkit-box-shadow: 0 -1px 0 rgba(255,255,255,0.05)
}

header#header ul#global-navigation > li {
  margin: 0 -0.2em;
  width: 20%;
  max-width: 180px;
  display: inline-block;
}

body#puppet header#header li#puppet-tab > a,
body#services header#header li#services-tab > a,
body#resources header#header li#resources-tab > a,
body#blog header#header li#community-tab > a,
body.blog header#header li#community-tab > a,
body.single header#header li#community-tab > a,
body#company header#header li#company-tab > a {
  color: white;
  border-top-color: #a965a9;
  background: #2e283c;
}

body#puppet header#header li#puppet-tab > a span.subtitle,
body#services header#header li#services-tab > a span.subtitle,
body#support header#header li#services-tab > a span.subtitle,
body#blog header#header li#community-tab > a span.subtitle,
body.blog header#header li#community-tab > a span.subtitle,
body.single header#header li#community-tab > a span.subtitle,
body#company header#header li#company-tab > a span.subtitle {
  color: #aaa;
}

header#header ul#global-navigation > li:first-child a{
  border-left: none !important;
  -webkit-border-top-left-radius: 6px;
  -moz-border-radius: 6px;
}

header#header ul#global-navigation > li:last-child a{
	border-right: none !important;
}

header#header ul#global-navigation > li > a {
  color: #747380;
  padding: 0.5em 20px 0.67em;
  font-weight: bold;
  border-right: 1px solid rgba(0,0,0,0.1);
  border-left: 1px solid rgba(255,255,255,0.05);
}

header#header ul#global-navigation > li > a:hover {
  background: #503577 !important;
  color: white;
  text-decoration: none;
  border-top-color: #f6d072;
  border-left-color: #593f7e;
  border-right-color: rgba(0,0,0,0.33);
}

header#header ul#global-navigation > li > a:active {
  color: #ccc;
  background-color: #442d65;
  border-top-color: #ffcb4d;
}

header#header ul#global-navigation > li > a:active span.drop-down-trigger {
  opacity: 0.5;
}

header#header ul#global-navigation > li.active > a {
  background: #2c2639;
}

header#header ul li.with-submenu > ul {
  background: #fff6e5;
  position: absolute;
  left: 0;
  z-index: 10;
  font-size: 0.85em;
  visibility: hidden;
  -webkit-box-shadow: 1px 2px 1px rgba(0,0,0,0.25);
  -moz-box-shadow: 1px 2px 1px rgba(0,0,0,0.25);
	width: 100%;
	white-space: normal;
}

header#header ul li.with-submenu > ul li ul {
  border-bottom: 1px solid #ebe3d3;
  display: block;
  padding-bottom: 0.125em;
  margin-bottom: 0.125em;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
}

header#header ul li.with-submenu > ul li:last-child ul {
  border: none;
  margin: 0;
  padding: 0;
}

header#header ul ul:last-child,
header#header ul ul:last-child li:last-child,
header#header ul ul:last-child li:last-child a {
  -webkit-border-bottom-left-radius: 8px;
  -webkit-border-bottom-right-radius: 8px;
  -moz-border-radius-bottomleft: 8px;
  -moz-border-radius-bottomright: 8px;
}

header#header ul li.active ul {
  visibility: visible;
}

header#header li.with-submenu ul li {
  display: block;
  border: none;
}

header#header ul li.with-submenu ul li a {
  padding: 0.5em 10px;
  color: #653413;
  background: #fff6e5;
  border: none;
}

header#header ul li.with-submenu ul li a:hover {
  background: white;
  color: #a25a3b;
}

header#header ul li.with-submenu {
  position: relative;
}

header#header ul li.with-submenu > a {
  padding-right: 30px !important;
  position: relative;
}

header#header ul span.drop-down-trigger {
  display: block;
  width: 20px;
  height: 2.6em;
  background: url(images/icons/dropdown_indicator.png) center 51% no-repeat #342d44;
  background: url(images/icons/dropdown_indicator.png) center 51% no-repeat, -webkit-gradient(linear, 0% 0%, 0% 100%, from(#4c3272), to(#342d44));
  background: url(images/icons/dropdown_indicator.png) center 51% no-repeat, -moz-linear-gradient(#4c3272, #342d44);
  position: absolute;
  top: 0;
  right: 0;
  border-left: 1px solid rgba(0,0,0,0.03);
  opacity: 0;
  -webkit-transition: 0.125s opacity linear;
  -moz-transition: 0.125s opacity linear;
}

header#header ul li:hover span.drop-down-trigger {
  opacity: 1;
  visibility: visible;
}

header#header ul span.drop-down-trigger:hover {
  border-left: 1px solid rgba(0,0,0,0.1);
  background: #672e9f url(images/icons/dropdown_indicator.png) no-repeat center 51%;
}

header#header ul li.active span.drop-down-trigger {
  background: #2b2538 url(images/icons/dropdown_indicator_active.png) center center no-repeat;
}

header#header li a span.subtitle {
  display: block;
  font-size: 0.85em;
  color: #6d6480;
  margin-top: -0.125em;
  font-weight: normal;
}

header#header li:hover a span.subtitle {
  color: #aaa;
}

/* @end */

/* @group Misc Navigation */

#header #misc-navigation{
  position: absolute;
  top: 0;
  right: 0;
  font-size: 0.85em;
  font-weight: bold;
}
#header #misc-navigation ul {
  padding: 3px 10px 5px;
  display:inline-block;
  white-space: nowrap;
  -webkit-border-bottom-left-radius: 6px;
  -webkit-border-bottom-right-radius: 6px;
  -moz-border-radius-bottomleft: 6px;
  -moz-border-radius-bottomright: 6px;
  background: #514a6b;
  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#514a6b), to(#524f74));
  background: -moz-linear-gradient(#514a6b, #524f74);
  -webkit-box-shadow: 2px 2px 0 rgba(0,0,0,0.05);
  -moz-box-shadow: 2px 2px 0 rgba(0,0,0,0.05);
}

#header #misc-navigation ul li{
	display: inline-block;
	margin-right: 0.8em;
}

#header #misc-navigation ul li:last-child{
	margin-right: -0.67em;
}

#header #misc-navigation ul li a{
	color: #9c99b3;
}

#header #misc-navigation ul li a:hover{
	text-decoration: underline;
}
/* ... */

